Alteração no footer (que ainda não deu certo). Ele precisa preencher toda a parte de baixo da página.

--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
     </div>
 </div>
 
-<footer>
-    <div class="container-fluid">
+<footer class="footer-full-width"> 
+    <div class="container-fluid"> 
         <a class="logo" href="#">Me GuIA</a>
         <p>2025 - Todos os direitos reservados</p>
     </div>
