Descrição do FAQ

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             </h2>
                 <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                     <div class="accordion-body">
-                    <strong>This is the first item’s accordion body.</strong> 
+                    <p><strong>O Me Guia é uma plataforma feita para jovens que estão começando suas carreiras e profissionais que buscam realocação no mercado de trabalho.</strong> Temos o objetivo de te ajudar nessa jornada que para muitos pode ser cansativa e frustrante, tornando-a uma grande descoberta pessoal e profissional.</p>
                     </div>
                 </div>
         </div>
@@ -131,7 +131,7 @@
             </h2>
                 <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                     <div class="accordion-body">
-                    <strong>This is the second item’s accordion body.</strong> 
+                    <p><strong> Ele garante que você esteja atualizado sobre o futuro da sua carreira</strong>, sobre o que o mercado está realmente procurando EM SUA ÁREA. </p>
                     </div>
                 </div>
         </div>
@@ -144,7 +144,7 @@
             </h2>
                 <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                     <div class="accordion-body">
-                    <strong>This is the third item’s accordion body.</strong> 
+                        <p><strong>Para todo mundo</strong>, temos o objetivo de mostrar a você que a IA não é só utilizada no mundo Tech e sim em todas as áreas.</p>
                     </div>
                 </div>
         <div class="accordion-item">
@@ -155,7 +155,7 @@
             </h2>
                 <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                     <div class="accordion-body">
-                    <strong>This is the third item’s accordion body.</strong> 
+                        <p><strong>99% de certeza</strong> se feito do jeito correto. Quando se é aplicado uma narrativa, um objetivo e uma conclusão de sucesso, sem dúvida você será um candidato em destaque.</p>
                     </div>
                 </div>
     </div>
